# tantivy

./: Cargo.toml
examples/: create_or_open.rs
query-grammar/: Cargo.toml
query-grammar/src/: lib.rs  occur.rs  query_grammar.rs  user_input_ast.rs
src/: docset.rs  error.rs  lib.rs
src/collector/: count_collector.rs  custom_score_top_collector.rs  docset_collector.rs  facet_collector.rs  filter_collector_wrapper.rs  int_facet_collector.rs  mod.rs  multi_collector.rs  tests.rs  top_collector.rs  top_score_collector.rs  tweak_score_top_collector.rs
src/common/: bitpacker.rs  bitset.rs  composite_file.rs  counting_writer.rs  mod.rs  serialize.rs  vint.rs
src/core/: executor.rs  index.rs  index_meta.rs  inverted_index_reader.rs  mod.rs  searcher.rs  segment.rs  segment_component.rs  segment_id.rs  segment_reader.rs
src/directory/: directory.rs  directory_lock.rs  error.rs  file_slice.rs  file_watcher.rs  footer.rs  managed_directory.rs  mmap_directory.rs  mod.rs  owned_bytes.rs  ram_directory.rs  read_only_source.rs  tests.rs  watch_event_router.rs
src/fastfield/: delete.rs  error.rs  facet_reader.rs  reader.rs  readers.rs  serializer.rs  writer.rs
src/fastfield/bytes/: mod.rs  reader.rs  writer.rs
src/fastfield/multivalued/: mod.rs  reader.rs  writer.rs
src/fieldnorm/: code.rs  reader.rs  serializer.rs  writer.rs
src/indexer/: delete_queue.rs  doc_opstamp_mapping.rs  index_writer.rs  log_merge_policy.rs  merge_operation.rs  merge_policy.rs  merger.rs  mod.rs  operation.rs  prepared_commit.rs  segment_entry.rs  segment_manager.rs  segment_register.rs  segment_serializer.rs  segment_updater.rs  segment_writer.rs  stamper.rs
src/positions/: mod.rs  reader.rs  serializer.rs
src/postings/: block_search.rs  block_segment_postings.rs  postings.rs  postings_writer.rs  recorder.rs  segment_postings.rs  serializer.rs  skip.rs  term_info.rs
src/postings/compression/: mod.rs  vint.rs
src/postings/stacker/: expull.rs  memory_arena.rs  mod.rs  term_hashmap.rs
src/query/: all_query.rs  automaton_weight.rs  bm25.rs  boost_query.rs  empty_query.rs  exclude.rs  explanation.rs  fuzzy_query.rs  intersection.rs  intersection_two.rs  query.rs  range_query.rs  regex_query.rs  reqopt_scorer.rs  score_combiner.rs  scorer.rs  union.rs  vec_docset.rs  weight.rs
src/query/bitset/: mod.rs
src/query/boolean_query/: block_wand.rs  boolean_query.rs  boolean_weight.rs  mod.rs
src/query/phrase_query/: mod.rs  phrase_query.rs  phrase_scorer.rs  phrase_weight.rs
src/query/query_parser/: logical_ast.rs  mod.rs  query_parser.rs
src/query/term_query/: mod.rs  term_query.rs  term_scorer.rs  term_weight.rs
src/reader/: mod.rs  pool.rs
src/schema/: document.rs  facet.rs  field.rs  field_entry.rs  field_type.rs  field_value.rs  flags.rs  index_record_option.rs  int_options.rs  named_field_document.rs  schema.rs  term.rs  text_options.rs  value.rs
src/snippet/: mod.rs
src/space_usage/: mod.rs
src/store/: compression_lz4.rs  compression_snap.rs  reader.rs  writer.rs
src/store/index/: block.rs  skip_index.rs  skip_index_builder.rs
src/store/skiplist/: mod.rs  skiplist.rs  skiplist_builder.rs
src/termdict/: merger.rs  streamer.rs  term_info_store.rs  termdict.rs
src/termdict/fst_termdict/: streamer.rs  term_info_store.rs  termdict.rs
src/tokenizer/: alphanum_only.rs  ascii_folding_filter.rs  facet_tokenizer.rs  lower_caser.rs  ngram_tokenizer.rs  raw_tokenizer.rs  remove_long.rs  simple_tokenizer.rs  stemmer.rs  stop_word_filter.rs  token_stream_chain.rs  tokenized_string.rs  tokenizer.rs  tokenizer_manager.rs
